--- a/JS/test/index.html
+++ b/JS/test/index.html
@@ -10,13 +10,9 @@
 </head>
 
 <body>
-    <button class="start">Animate</button>
-    <div class="wrapper">
-        <div class="box"></div>
-    </div>
-    <div class="buttons">
-        <button class="first"></button><button class="second"></button><button></button><button></button><button></button><button></button>
-    </div>
+    <button class="b-1">b-1</button>
+    <button class="b-2">b-2</button>
+    <button class="b-3">b-3</button>
     <script src="script.js">
 
     </script>
